// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`index APIs > GET /indexes/:indexID > should get index successfully 1`] = `
Object {
  "award": 0,
  "collects": 96,
  "createdAt": 1352366596,
  "desc": "[url]http://www.tudou.com/programs/view/W6eIoxnHs6g/[/url]
有美国动画混入，所以准确的说是在日本播放的动画最高收视率（而且是关东地区的
基本大部分是70年代的，那个年代娱乐贫乏优势真大",
  "id": 15045,
  "replies": 8,
  "stats": Object {
    "subject": Object {
      "anime": 101,
    },
  },
  "title": "日本动画最高收视率TOP100",
  "total": 101,
  "type": 0,
  "uid": 14127,
  "updatedAt": 1759324867,
  "user": Object {
    "avatar": Object {
      "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
      "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
      "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
    },
    "group": 0,
    "id": 14127,
    "joinedAt": 0,
    "nickname": "nickname 14127",
    "sign": "sing 14127",
    "username": "14127",
  },
}
`;

exports[`index APIs > GET /indexes/:indexID/related > should get index related successfully 1`] = `
Object {
  "data": Array [
    Object {
      "award": "",
      "cat": 0,
      "comment": "1位 40.3",
      "createdAt": 1352382566,
      "id": 29277,
      "order": 1,
      "rid": 15045,
      "sid": 806,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "2位 39.9",
      "createdAt": 1352382511,
      "id": 29276,
      "order": 2,
      "rid": 15045,
      "sid": 28165,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "3位 39.4",
      "createdAt": 1352382444,
      "id": 29275,
      "order": 3,
      "rid": 15045,
      "sid": 32585,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "4位 36.9",
      "createdAt": 1352382378,
      "id": 29274,
      "order": 4,
      "rid": 15045,
      "sid": 47243,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "5位 36.7",
      "createdAt": 1352382135,
      "id": 29272,
      "order": 5,
      "rid": 15045,
      "sid": 41983,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "5位 36.7",
      "createdAt": 1352382314,
      "id": 29273,
      "order": 5,
      "rid": 15045,
      "sid": 53805,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "7位 36",
      "createdAt": 1352382072,
      "id": 29271,
      "order": 7,
      "rid": 15045,
      "sid": 37258,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "8位 35.6",
      "createdAt": 1352382022,
      "id": 29270,
      "order": 8,
      "rid": 15045,
      "sid": 53804,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "9位 34.5",
      "createdAt": 1352381764,
      "id": 29266,
      "order": 9,
      "rid": 15045,
      "sid": 53739,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "10位 33.7 （有奇怪的美国动画混进去了！",
      "createdAt": 1352381582,
      "id": 29264,
      "order": 10,
      "rid": 15045,
      "sid": 25713,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "11位 33.6",
      "createdAt": 1352380988,
      "id": 29258,
      "order": 11,
      "rid": 15045,
      "sid": 53802,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "12位 32.5",
      "createdAt": 1352380796,
      "id": 29257,
      "order": 12,
      "rid": 15045,
      "sid": 36359,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "13位 31.9",
      "createdAt": 1352380648,
      "id": 29252,
      "order": 13,
      "rid": 15045,
      "sid": 53801,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "13位 31.9",
      "createdAt": 1352380716,
      "id": 29254,
      "order": 13,
      "rid": 15045,
      "sid": 2741,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "15位 31.8",
      "createdAt": 1352380464,
      "id": 29246,
      "order": 15,
      "rid": 15045,
      "sid": 53800,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "16位 31.6",
      "createdAt": 1352380102,
      "id": 29245,
      "order": 16,
      "rid": 15045,
      "sid": 10404,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "17位 31.2",
      "createdAt": 1352379920,
      "id": 29241,
      "order": 17,
      "rid": 15045,
      "sid": 37460,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "18位 30.7",
      "createdAt": 1352379781,
      "id": 29239,
      "order": 18,
      "rid": 15045,
      "sid": 53794,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "19位 30.4",
      "createdAt": 1352379633,
      "id": 29235,
      "order": 19,
      "rid": 15045,
      "sid": 10390,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "20位 30.1",
      "createdAt": 1352379532,
      "id": 29234,
      "order": 20,
      "rid": 15045,
      "sid": 10374,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "21位 29.6",
      "createdAt": 1352379351,
      "id": 29233,
      "order": 21,
      "rid": 15045,
      "sid": 53789,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "22位 29.5",
      "createdAt": 1352379134,
      "id": 29229,
      "order": 22,
      "rid": 15045,
      "sid": 9565,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "23位 29.1",
      "createdAt": 1352379073,
      "id": 29228,
      "order": 23,
      "rid": 15045,
      "sid": 53788,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "24位 28.8",
      "createdAt": 1352378805,
      "id": 29227,
      "order": 24,
      "rid": 15045,
      "sid": 53787,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "25位 28.5",
      "createdAt": 1352378659,
      "id": 29226,
      "order": 25,
      "rid": 15045,
      "sid": 53786,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "26位 28.4",
      "createdAt": 1352378419,
      "id": 29224,
      "order": 26,
      "rid": 15045,
      "sid": 53785,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "27位 28.2",
      "createdAt": 1352375867,
      "id": 29220,
      "order": 27,
      "rid": 15045,
      "sid": 24823,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "28位 28",
      "createdAt": 1352375363,
      "id": 29218,
      "order": 28,
      "rid": 15045,
      "sid": 53779,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "29位 27.8",
      "createdAt": 1352375125,
      "id": 29216,
      "order": 29,
      "rid": 15045,
      "sid": 53778,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "29位 27.8",
      "createdAt": 1352375182,
      "id": 29217,
      "order": 29,
      "rid": 15045,
      "sid": 18254,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "31位 27.6",
      "createdAt": 1352374960,
      "id": 29215,
      "order": 31,
      "rid": 15045,
      "sid": 37176,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "32位 27.5",
      "createdAt": 1352374848,
      "id": 29214,
      "order": 32,
      "rid": 15045,
      "sid": 9005,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "33位 27.4",
      "createdAt": 1352374797,
      "id": 29213,
      "order": 33,
      "rid": 15045,
      "sid": 53775,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "34位 27.2",
      "createdAt": 1352374428,
      "id": 29210,
      "order": 34,
      "rid": 15045,
      "sid": 30163,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "34位 27.2",
      "createdAt": 1352374487,
      "id": 29211,
      "order": 34,
      "rid": 15045,
      "sid": 9540,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "34位 27.2",
      "createdAt": 1352374625,
      "id": 29212,
      "order": 34,
      "rid": 15045,
      "sid": 53774,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "37位 27.1",
      "createdAt": 1352373637,
      "id": 29206,
      "order": 37,
      "rid": 15045,
      "sid": 13561,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "37位 27.1",
      "createdAt": 1352373858,
      "id": 29207,
      "order": 37,
      "rid": 15045,
      "sid": 53771,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "37位 27.1",
      "createdAt": 1352374002,
      "id": 29208,
      "order": 37,
      "rid": 15045,
      "sid": 53772,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "37位 27.1",
      "createdAt": 1352374234,
      "id": 29209,
      "order": 37,
      "rid": 15045,
      "sid": 53773,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "41位 27",
      "createdAt": 1352373474,
      "id": 29205,
      "order": 41,
      "rid": 15045,
      "sid": 53770,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "42位 26.9",
      "createdAt": 1352373318,
      "id": 29204,
      "order": 42,
      "rid": 15045,
      "sid": 5487,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "43位 26.8",
      "createdAt": 1352373263,
      "id": 29203,
      "order": 43,
      "rid": 15045,
      "sid": 53769,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "44位 26.6",
      "createdAt": 1352373056,
      "id": 29202,
      "order": 44,
      "rid": 15045,
      "sid": 53768,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "45位 26.5",
      "createdAt": 1352372498,
      "id": 29200,
      "order": 45,
      "rid": 15045,
      "sid": 11191,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "45位 26.5",
      "createdAt": 1352372658,
      "id": 29201,
      "order": 45,
      "rid": 15045,
      "sid": 53767,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "47位 26.4",
      "createdAt": 1352372214,
      "id": 29198,
      "order": 47,
      "rid": 15045,
      "sid": 53765,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "47位 26.4",
      "createdAt": 1352372394,
      "id": 29199,
      "order": 47,
      "rid": 15045,
      "sid": 53766,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "49位 26.3",
      "createdAt": 1352372050,
      "id": 29197,
      "order": 49,
      "rid": 15045,
      "sid": 16805,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "50位 26.2",
      "createdAt": 1352371955,
      "id": 29196,
      "order": 50,
      "rid": 15045,
      "sid": 53764,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "51位 25.9",
      "createdAt": 1352371743,
      "id": 29194,
      "order": 51,
      "rid": 15045,
      "sid": 53762,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "52位 25.8",
      "createdAt": 1352371539,
      "id": 29189,
      "order": 52,
      "rid": 15045,
      "sid": 53761,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "52位 25.8",
      "createdAt": 1352371588,
      "id": 29190,
      "order": 52,
      "rid": 15045,
      "sid": 11189,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "54位 25.7",
      "createdAt": 1352371083,
      "id": 29187,
      "order": 54,
      "rid": 15045,
      "sid": 27577,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "54位 25.7",
      "createdAt": 1352371240,
      "id": 29188,
      "order": 54,
      "rid": 15045,
      "sid": 53760,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "56位 25.6",
      "createdAt": 1352370922,
      "id": 29186,
      "order": 56,
      "rid": 15045,
      "sid": 53759,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "57位 25.3",
      "createdAt": 1352370793,
      "id": 29185,
      "order": 57,
      "rid": 15045,
      "sid": 53758,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "58位 25.2",
      "createdAt": 1352370550,
      "id": 29184,
      "order": 58,
      "rid": 15045,
      "sid": 53757,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "59位 24.9",
      "createdAt": 1352370287,
      "id": 29178,
      "order": 59,
      "rid": 15045,
      "sid": 53755,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "59位 24.9",
      "createdAt": 1352370341,
      "id": 29180,
      "order": 59,
      "rid": 15045,
      "sid": 10388,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "61位 24.7",
      "createdAt": 1352369942,
      "id": 29174,
      "order": 61,
      "rid": 15045,
      "sid": 53754,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "61位 24.7",
      "createdAt": 1352370004,
      "id": 29175,
      "order": 61,
      "rid": 15045,
      "sid": 8803,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "63位 24.6",
      "createdAt": 1352369787,
      "id": 29173,
      "order": 63,
      "rid": 15045,
      "sid": 53753,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "64位 24.5",
      "createdAt": 1352369636,
      "id": 29170,
      "order": 64,
      "rid": 15045,
      "sid": 53752,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "65位 24.3",
      "createdAt": 1352369232,
      "id": 29168,
      "order": 65,
      "rid": 15045,
      "sid": 53738,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "65位 24.3",
      "createdAt": 1352369372,
      "id": 29169,
      "order": 65,
      "rid": 15045,
      "sid": 53751,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "67位 24.1",
      "createdAt": 1352369155,
      "id": 29167,
      "order": 67,
      "rid": 15045,
      "sid": 53750,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "68位 23.5",
      "createdAt": 1352369014,
      "id": 29166,
      "order": 68,
      "rid": 15045,
      "sid": 53749,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "69位 23.4",
      "createdAt": 1352368669,
      "id": 29163,
      "order": 69,
      "rid": 15045,
      "sid": 8386,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "69位 23.4",
      "createdAt": 1352368782,
      "id": 29164,
      "order": 69,
      "rid": 15045,
      "sid": 899,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "71位 23.3",
      "createdAt": 1352368577,
      "id": 29162,
      "order": 71,
      "rid": 15045,
      "sid": 53748,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "72位 23",
      "createdAt": 1352368364,
      "id": 29161,
      "order": 72,
      "rid": 15045,
      "sid": 53747,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "73位 22.9",
      "createdAt": 1352367806,
      "id": 29159,
      "order": 73,
      "rid": 15045,
      "sid": 53745,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "73位 22.9",
      "createdAt": 1352368005,
      "id": 29160,
      "order": 73,
      "rid": 15045,
      "sid": 53746,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "75位 22.8",
      "createdAt": 1352367765,
      "id": 29158,
      "order": 75,
      "rid": 15045,
      "sid": 10392,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "76位 22.6",
      "createdAt": 1352367728,
      "id": 29157,
      "order": 76,
      "rid": 15045,
      "sid": 37228,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "77位 22.1",
      "createdAt": 1352367613,
      "id": 29154,
      "order": 77,
      "rid": 15045,
      "sid": 40379,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "77位 22.1",
      "createdAt": 1352367647,
      "id": 29155,
      "order": 77,
      "rid": 15045,
      "sid": 2921,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "77位 22.1",
      "createdAt": 1352367685,
      "id": 29156,
      "order": 77,
      "rid": 15045,
      "sid": 53737,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "80位 21.8",
      "createdAt": 1352367572,
      "id": 29153,
      "order": 80,
      "rid": 15045,
      "sid": 53744,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "81位 21.7",
      "createdAt": 1352367536,
      "id": 29152,
      "order": 81,
      "rid": 15045,
      "sid": 18256,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "82位 21.6",
      "createdAt": 1352367499,
      "id": 29151,
      "order": 82,
      "rid": 15045,
      "sid": 41982,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "83位 21.4",
      "createdAt": 1352367468,
      "id": 29150,
      "order": 83,
      "rid": 15045,
      "sid": 1608,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "84位 21.2",
      "createdAt": 1352367433,
      "id": 29149,
      "order": 84,
      "rid": 15045,
      "sid": 5426,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "85位 21",
      "createdAt": 1352367403,
      "id": 29148,
      "order": 85,
      "rid": 15045,
      "sid": 44932,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "86位 20.9",
      "createdAt": 1352367325,
      "id": 29146,
      "order": 86,
      "rid": 15045,
      "sid": 37298,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "86位 20.9",
      "createdAt": 1352367359,
      "id": 29147,
      "order": 86,
      "rid": 15045,
      "sid": 53736,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "88位 20.8",
      "createdAt": 1352367286,
      "id": 29145,
      "order": 88,
      "rid": 15045,
      "sid": 37299,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "89位 20.7",
      "createdAt": 1352367249,
      "id": 29144,
      "order": 89,
      "rid": 15045,
      "sid": 13604,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "90位 20.6",
      "createdAt": 1352367214,
      "id": 29143,
      "order": 90,
      "rid": 15045,
      "sid": 53743,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "91位 20.3",
      "createdAt": 1352367181,
      "id": 29142,
      "order": 91,
      "rid": 15045,
      "sid": 4025,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "92位 20.1",
      "createdAt": 1352367136,
      "id": 29141,
      "order": 92,
      "rid": 15045,
      "sid": 53742,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "93位 20",
      "createdAt": 1352367105,
      "id": 29140,
      "order": 93,
      "rid": 15045,
      "sid": 53741,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "94位 19.7",
      "createdAt": 1352367066,
      "id": 29139,
      "order": 94,
      "rid": 15045,
      "sid": 9566,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "95位 19.1",
      "createdAt": 1352366978,
      "id": 29136,
      "order": 95,
      "rid": 15045,
      "sid": 53740,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "95位 19.1",
      "createdAt": 1352367021,
      "id": 29138,
      "order": 95,
      "rid": 15045,
      "sid": 9588,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "97位 19",
      "createdAt": 1352366861,
      "id": 29134,
      "order": 97,
      "rid": 15045,
      "sid": 6605,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "97位 19",
      "createdAt": 1352366934,
      "id": 29135,
      "order": 97,
      "rid": 15045,
      "sid": 975,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "99位 18.8",
      "createdAt": 1352366806,
      "id": 29133,
      "order": 99,
      "rid": 15045,
      "sid": 53735,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "100位  18.7",
      "createdAt": 1352366731,
      "id": 29131,
      "order": 100,
      "rid": 15045,
      "sid": 2166,
      "type": 2,
    },
  ],
  "total": 101,
}
`;

exports[`index APIs > GET /indexes/:indexID/related > should get index related with filters 1`] = `
Object {
  "data": Array [
    Object {
      "award": "",
      "cat": 0,
      "comment": "11位 33.6",
      "createdAt": 1352380988,
      "id": 29258,
      "order": 11,
      "rid": 15045,
      "sid": 53802,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "12位 32.5",
      "createdAt": 1352380796,
      "id": 29257,
      "order": 12,
      "rid": 15045,
      "sid": 36359,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "13位 31.9",
      "createdAt": 1352380648,
      "id": 29252,
      "order": 13,
      "rid": 15045,
      "sid": 53801,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "13位 31.9",
      "createdAt": 1352380716,
      "id": 29254,
      "order": 13,
      "rid": 15045,
      "sid": 2741,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "15位 31.8",
      "createdAt": 1352380464,
      "id": 29246,
      "order": 15,
      "rid": 15045,
      "sid": 53800,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "16位 31.6",
      "createdAt": 1352380102,
      "id": 29245,
      "order": 16,
      "rid": 15045,
      "sid": 10404,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "17位 31.2",
      "createdAt": 1352379920,
      "id": 29241,
      "order": 17,
      "rid": 15045,
      "sid": 37460,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "18位 30.7",
      "createdAt": 1352379781,
      "id": 29239,
      "order": 18,
      "rid": 15045,
      "sid": 53794,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "19位 30.4",
      "createdAt": 1352379633,
      "id": 29235,
      "order": 19,
      "rid": 15045,
      "sid": 10390,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "20位 30.1",
      "createdAt": 1352379532,
      "id": 29234,
      "order": 20,
      "rid": 15045,
      "sid": 10374,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "21位 29.6",
      "createdAt": 1352379351,
      "id": 29233,
      "order": 21,
      "rid": 15045,
      "sid": 53789,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "22位 29.5",
      "createdAt": 1352379134,
      "id": 29229,
      "order": 22,
      "rid": 15045,
      "sid": 9565,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "23位 29.1",
      "createdAt": 1352379073,
      "id": 29228,
      "order": 23,
      "rid": 15045,
      "sid": 53788,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "24位 28.8",
      "createdAt": 1352378805,
      "id": 29227,
      "order": 24,
      "rid": 15045,
      "sid": 53787,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "25位 28.5",
      "createdAt": 1352378659,
      "id": 29226,
      "order": 25,
      "rid": 15045,
      "sid": 53786,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "26位 28.4",
      "createdAt": 1352378419,
      "id": 29224,
      "order": 26,
      "rid": 15045,
      "sid": 53785,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "27位 28.2",
      "createdAt": 1352375867,
      "id": 29220,
      "order": 27,
      "rid": 15045,
      "sid": 24823,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "28位 28",
      "createdAt": 1352375363,
      "id": 29218,
      "order": 28,
      "rid": 15045,
      "sid": 53779,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "29位 27.8",
      "createdAt": 1352375125,
      "id": 29216,
      "order": 29,
      "rid": 15045,
      "sid": 53778,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "29位 27.8",
      "createdAt": 1352375182,
      "id": 29217,
      "order": 29,
      "rid": 15045,
      "sid": 18254,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "31位 27.6",
      "createdAt": 1352374960,
      "id": 29215,
      "order": 31,
      "rid": 15045,
      "sid": 37176,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "32位 27.5",
      "createdAt": 1352374848,
      "id": 29214,
      "order": 32,
      "rid": 15045,
      "sid": 9005,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "33位 27.4",
      "createdAt": 1352374797,
      "id": 29213,
      "order": 33,
      "rid": 15045,
      "sid": 53775,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "34位 27.2",
      "createdAt": 1352374428,
      "id": 29210,
      "order": 34,
      "rid": 15045,
      "sid": 30163,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "34位 27.2",
      "createdAt": 1352374487,
      "id": 29211,
      "order": 34,
      "rid": 15045,
      "sid": 9540,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "34位 27.2",
      "createdAt": 1352374625,
      "id": 29212,
      "order": 34,
      "rid": 15045,
      "sid": 53774,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "37位 27.1",
      "createdAt": 1352373637,
      "id": 29206,
      "order": 37,
      "rid": 15045,
      "sid": 13561,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "37位 27.1",
      "createdAt": 1352373858,
      "id": 29207,
      "order": 37,
      "rid": 15045,
      "sid": 53771,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "37位 27.1",
      "createdAt": 1352374002,
      "id": 29208,
      "order": 37,
      "rid": 15045,
      "sid": 53772,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "37位 27.1",
      "createdAt": 1352374234,
      "id": 29209,
      "order": 37,
      "rid": 15045,
      "sid": 53773,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "41位 27",
      "createdAt": 1352373474,
      "id": 29205,
      "order": 41,
      "rid": 15045,
      "sid": 53770,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "42位 26.9",
      "createdAt": 1352373318,
      "id": 29204,
      "order": 42,
      "rid": 15045,
      "sid": 5487,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "43位 26.8",
      "createdAt": 1352373263,
      "id": 29203,
      "order": 43,
      "rid": 15045,
      "sid": 53769,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "44位 26.6",
      "createdAt": 1352373056,
      "id": 29202,
      "order": 44,
      "rid": 15045,
      "sid": 53768,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "45位 26.5",
      "createdAt": 1352372498,
      "id": 29200,
      "order": 45,
      "rid": 15045,
      "sid": 11191,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "45位 26.5",
      "createdAt": 1352372658,
      "id": 29201,
      "order": 45,
      "rid": 15045,
      "sid": 53767,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "47位 26.4",
      "createdAt": 1352372214,
      "id": 29198,
      "order": 47,
      "rid": 15045,
      "sid": 53765,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "47位 26.4",
      "createdAt": 1352372394,
      "id": 29199,
      "order": 47,
      "rid": 15045,
      "sid": 53766,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "49位 26.3",
      "createdAt": 1352372050,
      "id": 29197,
      "order": 49,
      "rid": 15045,
      "sid": 16805,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "50位 26.2",
      "createdAt": 1352371955,
      "id": 29196,
      "order": 50,
      "rid": 15045,
      "sid": 53764,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "51位 25.9",
      "createdAt": 1352371743,
      "id": 29194,
      "order": 51,
      "rid": 15045,
      "sid": 53762,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "52位 25.8",
      "createdAt": 1352371539,
      "id": 29189,
      "order": 52,
      "rid": 15045,
      "sid": 53761,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "52位 25.8",
      "createdAt": 1352371588,
      "id": 29190,
      "order": 52,
      "rid": 15045,
      "sid": 11189,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "54位 25.7",
      "createdAt": 1352371083,
      "id": 29187,
      "order": 54,
      "rid": 15045,
      "sid": 27577,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "54位 25.7",
      "createdAt": 1352371240,
      "id": 29188,
      "order": 54,
      "rid": 15045,
      "sid": 53760,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "56位 25.6",
      "createdAt": 1352370922,
      "id": 29186,
      "order": 56,
      "rid": 15045,
      "sid": 53759,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "57位 25.3",
      "createdAt": 1352370793,
      "id": 29185,
      "order": 57,
      "rid": 15045,
      "sid": 53758,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "58位 25.2",
      "createdAt": 1352370550,
      "id": 29184,
      "order": 58,
      "rid": 15045,
      "sid": 53757,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "59位 24.9",
      "createdAt": 1352370287,
      "id": 29178,
      "order": 59,
      "rid": 15045,
      "sid": 53755,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "59位 24.9",
      "createdAt": 1352370341,
      "id": 29180,
      "order": 59,
      "rid": 15045,
      "sid": 10388,
      "type": 2,
    },
  ],
  "total": 101,
}
`;

exports[`index comments > should get index comments 1`] = `
Array [
  Object {
    "content": "测试目录评论",
    "createdAt": 1718275200,
    "creatorID": 14127,
    "id": 12345680,
    "mainID": 15045,
    "relatedID": 0,
    "replies": Array [
      Object {
        "content": "测试目录评论2",
        "createdAt": 1718275200,
        "creatorID": 14127,
        "id": 12345681,
        "mainID": 15045,
        "relatedID": 12345680,
        "state": 0,
        "user": Object {
          "avatar": Object {
            "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
            "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
            "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
          },
          "group": 0,
          "id": 14127,
          "joinedAt": 0,
          "nickname": "nickname 14127",
          "sign": "sing 14127",
          "username": "14127",
        },
      },
      Object {
        "content": "测试目录评论3",
        "createdAt": 1718275200,
        "creatorID": 14127,
        "id": 12345682,
        "mainID": 15045,
        "relatedID": 12345680,
        "state": 0,
        "user": Object {
          "avatar": Object {
            "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
            "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
            "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
          },
          "group": 0,
          "id": 14127,
          "joinedAt": 0,
          "nickname": "nickname 14127",
          "sign": "sing 14127",
          "username": "14127",
        },
      },
    ],
    "state": 0,
    "user": Object {
      "avatar": Object {
        "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
        "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
        "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
      },
      "group": 0,
      "id": 14127,
      "joinedAt": 0,
      "nickname": "nickname 14127",
      "sign": "sing 14127",
      "username": "14127",
    },
  },
]
`;

exports[`index comments > should not allow create index comment 1`] = `
Object {
  "code": "NEED_LOGIN",
  "error": "Unauthorized",
  "message": "you need to login before creating a comment",
  "statusCode": 401,
}
`;

exports[`index comments > should not delete index comment not owned 1`] = `
Object {
  "code": "NOT_ALLOWED",
  "error": "Forbidden",
  "message": "you don't have permission to delete a comment which is not yours",
  "statusCode": 403,
}
`;

exports[`index comments > should not edit index comment not owned 1`] = `
Object {
  "code": "NOT_ALLOWED",
  "error": "Forbidden",
  "message": "you don't have permission to edit a comment which is not yours",
  "statusCode": 403,
}
`;

exports[`index comments > should not edit index comment with reply 1`] = `
Object {
  "code": "NOT_ALLOWED",
  "error": "Forbidden",
  "message": "you don't have permission to edit a comment with replies",
  "statusCode": 403,
}
`;

exports[`index comments > should return 404 for non-existent comment when deleting 1`] = `
Object {
  "code": "NOT_FOUND",
  "error": "Not Found",
  "message": "comment id 999999 not found",
  "statusCode": 404,
}
`;

exports[`index comments > should return 404 for non-existent comment when editing 1`] = `
Object {
  "code": "NOT_FOUND",
  "error": "Not Found",
  "message": "comment id 999999 not found",
  "statusCode": 404,
}
`;

exports[`index comments > should return 404 for non-existent index when creating comment 1`] = `
Object {
  "code": "NOT_FOUND",
  "error": "Not Found",
  "message": "Index not found not found",
  "statusCode": 404,
}
`;

exports[`index comments > should return 404 for non-existent index when getting comments 1`] = `
Object {
  "code": "NOT_FOUND",
  "error": "Not Found",
  "message": "Index not found not found",
  "statusCode": 404,
}
`;
